--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -4,8 +4,18 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_PASSWORD=postgres2024
-      - POSTGRES_USER=postgres
-      - POSTGRES_DB=paralelogram
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    networks:
+      - postgres_network
+
+volumes:
+  data:
+    driver: local
+
+networks:
+  postgres_network:
+    driver: bridge
